--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <div class="greeting-container" id="greetingContainer"></div>
 </div>
 
-<audio id="birthdayAudio" src="./2.mp3" preload="auto"></audio>
+<audio id="birthdayAudio" src="https://lw-sycdn.kuwo.cn/e34c1e2034ab868dda3f666c167bcede/690441d2/resource/30106/trackmedia/M800001T3JAT15palI.mp3" preload="auto"></audio>
 
 <script src='https://cdn.jsdelivr.net/npm/tsparticles@1.34.0/tsparticles.min.js'></script>
 <script>
